# Information-Retrieval-and-Text-Mining

./: .gitignore
ethics-assistant/: corpus.py  ethics_assistant.ipynb  pyproject.toml  retrieval.py
